Fixed some deprecation warnings.